<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_bg"
    tools:context=".activity.McqActitivity">


    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="center_horizontal"
        android:text="@string/smoking"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        android:textStyle="bold" />


    <ScrollView
        android:layout_below="@+id/tv"
        android:layout_above="@+id/llBottom"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/common_native_layout" />


            <RelativeLayout
                android:id="@+id/rl21"
                style="@style/mcq"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/install_btn2">

                <TextView
                    style="@style/MyTextView"
                    android:text="@string/no"
                    android:textColor="@color/sky" />

                <ImageView
                    android:id="@+id/iv21"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_tick"
                    android:visibility="gone" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl22"
                style="@style/mcq"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/install_btn2">

                <TextView
                    style="@style/MyTextView"
                    android:text="@string/yes" />

                <ImageView
                    android:id="@+id/iv22"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_tick"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl23"
                style="@style/mcq"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/install_btn2">

                <TextView
                    style="@style/MyTextView"
                    android:text="@string/planning_to_quit2" />

                <ImageView
                    android:id="@+id/iv23"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_tick"
                    android:visibility="gone" />
            </RelativeLayout>


            <TextView
                android:id="@+id/btn_next3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:background="@drawable/install_btn2"
                android:gravity="center"
                android:text="NEXT"
                android:textColor="@color/tvColor"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_banner" />
    </LinearLayout>
</RelativeLayout>