<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".activity.StartScreenActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llBg"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:minHeight="300dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/layer" />

        </LinearLayout>

        <include layout="@layout/common_native_layout" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivStart"
            android:visibility="visible"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:src="@drawable/btn_start" />


        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/by_continue_you_agree_to_our"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="ontermsclick"
                    android:text="@string/terms_of_service"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="  and  "
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onprivacyclick"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll2"
        android:layout_alignParentBottom="true"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3" />

</RelativeLayout>